ex2/ex22/errors.txt
error1.c: In function ‘main’:
error1.c:5:5: error: expected declaration or statement at end of input
     printf("dfg");
     ^~~~~~
